tests/golden/defaults/paralus/paralus/10_helmchart/ztka/templates/deployment-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: workload
    app.kubernetes.io/instance: ztka
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/version: v0.3.0
    helm.sh/chart: ztka-0.3.1
  name: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: ztka
      app.kubernetes.io/name: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/component: workload
        app.kubernetes.io/instance: ztka
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/part-of: paralus
        app.kubernetes.io/version: v0.3.0
        helm.sh/chart: ztka-0.3.1
    spec:
      containers:
        - image: paralusio/dashboard:v0.2.5
          imagePullPolicy: IfNotPresent
          name: dashboard
          ports:
            - containerPort: 8000
              name: nginx
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: cache
            - mountPath: /var/run
              name: varrun
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-config
              subPath: nginx.conf
      securityContext: {}
      serviceAccountName: ztka-ztka
      volumes:
        - emptyDir: {}
          name: cache
        - emptyDir: {}
          name: varrun
        - configMap:
            name: dashboard-nginx-config
          name: nginx-config
