tests/golden/defaults/paralus/paralus/10_helmchart/ztka/templates/deployment-prompt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: workload
    app.kubernetes.io/instance: ztka
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prompt
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/version: v0.3.0
    helm.sh/chart: ztka-0.3.1
  name: prompt
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: ztka
      app.kubernetes.io/name: prompt
  template:
    metadata:
      labels:
        app.kubernetes.io/component: workload
        app.kubernetes.io/instance: ztka
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prompt
        app.kubernetes.io/part-of: paralus
        app.kubernetes.io/version: v0.3.0
        helm.sh/chart: ztka-0.3.1
    spec:
      containers:
        - command:
            - sh
            - -c
            - tail -F /audit-logs/audit.log 2>/tmp/tail-err
          image: docker.io/library/busybox:latest
          imagePullPolicy: IfNotPresent
          name: prompt-tail
          securityContext: {}
          volumeMounts:
            - mountPath: /audit-logs
              name: audit-logs
        - envFrom:
            - configMapRef:
                name: prompt-config
            - secretRef:
                name: paralus-db
          image: paralusio/prompt:v0.1.3
          imagePullPolicy: IfNotPresent
          name: ztka
          ports:
            - containerPort: 7009
              name: http
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /usr/local/bin/kubectl
              name: kubectl
              subPath: kubectl
            - mountPath: /audit-logs
              name: audit-logs
      initContainers:
        - command:
            - sh
            - -c
            - wget -q "https://dl.k8s.io/release/$(wget -qO- https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
              -O /data/kubectl && chmod +x /data/kubectl
          image: docker.io/library/busybox:latest
          name: install-kubectl
          volumeMounts:
            - mountPath: /data
              name: kubectl
      securityContext: {}
      serviceAccountName: ztka-ztka
      volumes:
        - emptyDir: {}
          name: kubectl
        - emptyDir: {}
          name: audit-logs
