tests/golden/defaults/paralus/paralus/10_helmchart/ztka/templates/httpproxy-console.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/version: v0.3.0
    helm.sh/chart: ztka-0.3.1
  name: console
spec:
  routes:
    - conditions:
        - prefix: /auth
      loadBalancerPolicy:
        strategy: Cookie
      services:
        - name: paralus
          port: 11000
    - conditions:
        - prefix: /event
      loadBalancerPolicy:
        strategy: Cookie
      services:
        - name: paralus
          port: 11000
    - conditions:
        - prefix: /infra
      loadBalancerPolicy:
        strategy: Cookie
      services:
        - name: paralus
          port: 11000
    - conditions:
        - prefix: /v2/sentry
      loadBalancerPolicy:
        strategy: Cookie
      services:
        - name: paralus
          port: 11000
    - conditions:
        - prefix: /v2/debug/prompt
      enableWebsockets: true
      services:
        - name: prompt
          port: 7009
    - conditions:
        - prefix: /
      services:
        - name: dashboard
          port: 80
    - conditions:
        - prefix: /self-service
      services:
        - name: ztka-kratos-public
          port: 80
  virtualhost:
    fqdn: console.paralus.local
