tests/golden/defaults/paralus/paralus/10_helmchart/ztka/templates/httpproxy-ztka.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/version: v0.3.0
    helm.sh/chart: ztka-0.3.1
  name: ztka-core-connector
spec:
  tcpproxy:
    services:
      - name: relay-server
        port: 443
  virtualhost:
    fqdn: '*.core-connector.paralus.local'
    tls:
      passthrough: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/version: v0.3.0
    helm.sh/chart: ztka-0.3.1
  name: ztka-user
spec:
  tcpproxy:
    services:
      - name: relay-server
        port: 443
  virtualhost:
    fqdn: '*.user.paralus.local'
    tls:
      passthrough: true
