tests/golden/defaults/paralus/paralus/10_helmchart/ztka/templates/service-paralus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: ztka
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: paralus
    app.kubernetes.io/part-of: paralus
    app.kubernetes.io/version: v0.2.8
    helm.sh/chart: ztka-0.2.9
  name: paralus
spec:
  ports:
    - name: http
      port: 11000
      protocol: TCP
      targetPort: http
    - name: rpc
      port: 10000
      protocol: TCP
      targetPort: rpc
    - name: relay-peering
      port: 10001
      protocol: TCP
      targetPort: relay-peering
  selector:
    app.kubernetes.io/instance: ztka
    app.kubernetes.io/name: paralus
  type: ClusterIP
